increase button contrast and smaller fixes

--- a/src/app.css
+++ b/src/app.css
@@ -99,7 +99,7 @@ select {
   font-size: 16px;
   font-weight: 500;
   font-family: inherit;
-  background-color: #f8f8f8;
+  background-color: #eee;
   cursor: pointer;
   transition: all 300ms;
 }
@@ -127,6 +127,7 @@ select:disabled {
   opacity: 0.5;
   outline: none;
   border-color: transparent;
+  cursor: default;
 }
 
 button,
